[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
]
